--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bitcoin-rpc-promise": "^2.1.6",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "socket.io": "^2.2.0"
   },
